# Discordbotmusicadvanced

./: .env.example  .gitignore  ENV_GUIDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
bot/: bot.py  config.py
bot/cogs/: library.py  meta.py  music.py  restrict.py
bot/music/: controller.py
bot/storage/: memory.py  sqlite_storage.py
bot/utils/: constants.py  errors.py  helpers.py  locks.py  logging.py  time.py
tests/: test_config.py
